// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VerifyPhoneRequest comprehensive snapshots > full verify phone request - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "2.0.0",
    "deviceId": "device-full",
    "geo": {
      "lat": 59.9343,
      "lng": 30.3351,
    },
    "ip": "10.0.0.1",
    "locale": "ru-RU",
    "sessionId": "session-full",
    "timezone": "Europe/Moscow",
    "userAgent": "Mozilla/5.0 (Linux; Android 10)",
  },
  "code": "654321",
  "dtoVersion": "1.1",
  "phone": "+491234567890",
  "redirectUrl": "https://app.example.com/verified?source=phone",
}
`;

exports[`VerifyPhoneRequest comprehensive snapshots > minimal verify phone request - полный snapshot 1`] = `
{
  "code": "123456",
  "phone": "+1234567890",
}
`;

exports[`VerifyPhoneRequest comprehensive snapshots > verify phone request with clientContext - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "code": "123456",
  "dtoVersion": "1.0",
  "phone": "+79991234567",
  "redirectUrl": "https://app.example.com/verified",
}
`;

exports[`VerifyPhoneRequest comprehensive snapshots > verify phone request with different code lengths - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "code": "1111",
  "dtoVersion": "1.0",
  "phone": "+79991234567",
  "redirectUrl": "https://app.example.com/verified",
}
`;

exports[`VerifyPhoneRequest comprehensive snapshots > verify phone request with different code lengths - полный snapshot 2`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "code": "11111",
  "dtoVersion": "1.0",
  "phone": "+79991234567",
  "redirectUrl": "https://app.example.com/verified",
}
`;

exports[`VerifyPhoneRequest comprehensive snapshots > verify phone request with different code lengths - полный snapshot 3`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "code": "111111",
  "dtoVersion": "1.0",
  "phone": "+79991234567",
  "redirectUrl": "https://app.example.com/verified",
}
`;

exports[`VerifyPhoneRequest comprehensive snapshots > verify phone request with different code lengths - полный snapshot 4`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "code": "1111111",
  "dtoVersion": "1.0",
  "phone": "+79991234567",
  "redirectUrl": "https://app.example.com/verified",
}
`;

exports[`VerifyPhoneRequest comprehensive snapshots > verify phone request with different code lengths - полный snapshot 5`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "code": "11111111",
  "dtoVersion": "1.0",
  "phone": "+79991234567",
  "redirectUrl": "https://app.example.com/verified",
}
`;

exports[`VerifyPhoneRequest comprehensive snapshots > verify phone request with redirectUrl - полный snapshot 1`] = `
{
  "clientContext": {
    "appVersion": "1.0.3",
    "deviceId": "device-123",
    "geo": {
      "lat": 55.7558,
      "lng": 37.6173,
    },
    "ip": "192.168.1.1",
    "locale": "en-US",
    "sessionId": "session-abc",
    "timezone": "UTC",
    "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64)",
  },
  "code": "123456",
  "dtoVersion": "1.0",
  "phone": "+79991234567",
  "redirectUrl": "https://app.example.com/verified",
}
`;
